syntax = "proto3";

option java_package = "com.jkramr.demowalletapi.grpc";

import "common.proto";

service WithdrawService {
    rpc WithdrawFunds (WithdrawRequest) returns (WithdrawResponse) {}
}

message WithdrawRequest {
    int32 user_id = 1;
    double amount = 2;
    Currency currency = 3;
}

message WithdrawResponse {
    enum ResponseCode {
        OK = 0;
        INVALID_REQUEST = 1;
        INSUFFICIENT_FUNDS = 2;
        WALLET_NOT_FOUND = 3;
        UNKNOWN_CURRENCY = 4;
        SERVER_ERROR = 999;
    }
    ResponseCode code = 1;
}